add repository to config

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   A personal blog about programming, soft & hard skills.
 baseurl: ""
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+repository: "ChrisGalliano/Blog"
 breadcrumbs: false
 
 comments:
