--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,23 +1,35 @@
 name: Testing the GitHub Pages publication
 
 on:
-    push
+  push
 
 jobs:
-    jekyll:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
+  jekyll:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
 
-            # Use GitHub Actions' cache to shorten build times and decrease load on servers
-            - uses: actions/cache@v2
-              with:
-                  path: vendor/bundle
-                  key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
-                  restore-keys: |
-                      ${{ runner.os }}-gems-
+    # Use GitHub Actions' cache to shorten build times and decrease load on servers
+    - uses: actions/cache@v2
+      with:
+        path: vendor/bundle
+        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
+        restore-keys: |
+          ${{ runner.os }}-gems-
 
-            # Standard usage
-            - uses:  helaili/jekyll-action@v2
-              with:
-                  token: ${{ secrets.GITHUB_TOKEN }}
+    # Standard usage
+    - uses:  helaili/jekyll-action@v2
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+
+    # Specify the Jekyll source location as a parameter
+    - uses: helaili/jekyll-action@v2
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        jekyll_src: 'sample_site'
+
+    # Specify the target branch (optional)
+    - uses: helaili/jekyll-action@v2
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        target_branch: 'gh-pages'
